# ei-wlroots-proxy

./: .gitignore  Cargo.lock.license  Cargo.toml  default.nix  devenv.lock.license  devenv.nix  devenv.yaml  ei-wlroots-proxy.nix  flake.lock.license  flake.nix  shell.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci-nix-pm-tests.yml  clean-old-workflow-runs.yml  verify-pr-commit.yml  verify-reuse-compliance.yml
build-aux/nix/: default.nix
src/: main.rs
