# SPDX-FileCopyrightText: 2024 The Input Leap Developers
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ei-wlroots-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.35", features = ["env", "derive", "unicode", "string"] }
miette = { version = "7.5.0", features = ["fancy"] }
reis = { version = "0.5.0", features = ["tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["fs", "process", "rt", "rt-multi-thread"] }
wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["client", "unstable"] }
wayland-protocols-misc = { version = "0.3.6", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
